--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
 </head>
 <body>
 
+<header>
+	<nav>
+		<h1>Logo</h1>
+			<button id="navButton">click</button>
+			
+			<div id="navLinks">
+
+				<ul>
+					<li><a href="#">stuffs</a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Contact</a></li>
+					<li><a href="#">stuff</a></li>
+				</ul>
+			</div>
+	</nav>
+</header>
+	
+
+
 
 <script src="js/script.js"></script>
 
