--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div id="navLinks">
 
 				<ul>
-					<li><a href="#">stuffs</a></li>
+					<li><a href="#">Home</a></li>
 					<li><a href="#">About</a></li>
 					<li><a href="#">Contact</a></li>
 					<li><a href="#">stuff</a></li>
